Wed Sep 25 13:57:38 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/login.c src/tds/query.c src/tds/read.c src/tds/write.c:
	- Replace bogus dblib error numbers with real ones.  Where a
	  suitable replacement is not available, use tdsdump_log()
	  instead.

Wed Sep 25 13:56:20 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/ctlib/unittests/t0008.c:
	- Remove unused variable.

Wed Sep 25 17:50:31 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/tds/query.c:
	- start writing support for mssql dynamic query

Tue Sep 24 21:05:11 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h include/tdsconvert.h src/apps/tsql.c
	  src/ctlib/cs.c src/ctlib/unittests/t0008.c src/dblib/dblib.c
	  src/odbc/convert_sql2string.c src/odbc/convert_tds2sql.c
	  src/tds/convert.c src/tds/unittests/t0006.c
	  src/tds/unittests/t0007.c src/tds/unittests/t0008.c:
	- Remove unused "destlen" from tds_convert() and friends.
	- Change tds_convert() so it never calls tds_client_msg().
	  Instead, error conditions are passed up to the caller as
	  negative return codes.
	- Call _dblib_client_msg() based on return codes from tds_convert().
	- Enable test in src/ctlib/unittests/t0008.c that now behaves
	  properly after the above changes.

Tue Sep 24 15:38:39 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/tds/token.c:
	- garbage-collect a comment that no longer makes sense in the current
	  context of the code.

Tue Sep 24 20:50:19 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h.in src/odbc/odbc.c src/tds/mem.c src/tds/token.c:
	- removed msg_info field of TDSSOCKET

Tue Sep 24 12:53:14 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/dbutil.c src/tds/token.c:
	- Generate the SYBESMSG error from the DB-Library layer, not the
	  TDS layer.  CT-Library doesn't have this behavior.
	- Always generate SYBESMSG for any server message with severity
	  greater than 10.  This contradicts the Sybase documentation, but